<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_activity_background"
    tools:context=".ResetActivity">

    <!--Login Form-->
    <LinearLayout
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form_background"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        >

        <!--Username Field-->
        <EditText
            android:id="@+id/r_emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorSecondary"
            android:backgroundTint="@color/colorSecondary"
            android:hint="@string/formEmailHint"
            android:inputType="text" />


        <!--Login Button-->
        <Button
            android:id="@+id/r_sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonBgColor_1"
            android:radius="100dp"
            android:text="@string/resetPasswordButtonName"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/r_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetBackButtonName"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/l_loginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>